export type Tag = 'potion' | 'fire resistance' | 'armor' | 'cold resistance' | 'water' | 'hydration'
